...
                Button(action: { [weak viewModel] in
                    coordinator.navigateToAddGrocery(onAddItem: viewModel?.addItem(name:))
                }) {
                    Image(systemName: AppTheme.SystemIcon.add)
                        .foregroundStyle(AppTheme.Colors.primary)
                }
                .accessibilityIdentifier("ADD_NEW_BUTTON")
            }
        }
        .alert(viewModel.deleteTitle, isPresented: $viewModel.showDeleteView) { [unowned viewModel] in
            Button(viewModel.confirmDeletionTitle, role: .destructive) { [weak viewModel] in
                try? viewModel?.deleteItem()
                viewModel?.hideDeleteRequestView()
...
